--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html>
-  <head>
+<head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>Frankencover by appsquickly</title>
@@ -9,70 +9,127 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
     <script src="javascripts/respond.js"></script>
     <!--[if lt IE 9]>
-      <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
     <!--[if lt IE 8]>
     <link rel="stylesheet" href="stylesheets/ie.css">
     <![endif]-->
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
-  </head>
-  <body>
-      <div id="header">
-        <nav>
-          <li class="fork"><a href="https://github.com/appsquickly/FrankenCover">View On GitHub</a></li>
-          <li class="downloads"><a href="https://github.com/appsquickly/FrankenCover/zipball/master">ZIP</a></li>
-          <li class="downloads"><a href="https://github.com/appsquickly/FrankenCover/tarball/master">TAR</a></li>
-          <li class="title">DOWNLOADS</li>
-        </nav>
-      </div><!-- end header -->
+</head>
+<body>
+<div id="header">
+    <nav>
+        <li class="downloads"><a href="https://github.com/appsquickly/FrankenCover">View On GitHub</a></li>
+        <!--<li class="downloads"><a href="https://github.com/appsquickly/FrankenCover/zipball/master">ZIP</a></li>-->
+        <!--<li class="downloads"><a href="https://github.com/appsquickly/FrankenCover/tarball/master">TAR</a></li>-->
+        <!--<li class="title">DOWNLOADS</li>-->
+    </nav>
+</div>
+<!-- end header -->
 
-    <div class="wrapper">
+<div class="wrapper">
 
-      <section>
+    <section>
         <div id="title">
-          <h1>Frankencover</h1>
-          <p>Code coverage for iOS and OSX. </p>
-          <hr>
-          <span class="credits left">Project maintained by <a href="https://github.com/appsquickly">appsquickly</a></span>
-          <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></span>
+            <h1>Frankencover</h1>
+
+            <p>Code coverage for iOS and OSX. </p>
+            <hr>
+            <span class="credits left">Project maintained by <a href="http://appsquick.ly">AppsQuickly</a></span>
+            <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a
+                    href="https://twitter.com/michigangraham">mattgraham</a></span>
         </div>
 
-        <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+        <p>Producing a test coverage report for iOS and OSX projects requires a mish-mash of tools and steps. Here we've
+            glued them all together into something that (hopefully) just works.</p>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+        <ul style="padding-bottom: 40px">
+            <li>Produces an HTML test coverage report with the least possible steps.</li>
+            <li>Includes a coverage checker. This can be used in CI builds to check minumum test coverage - failing the
+                build if coverage falls below the required amount.
+            </li>
+        </ul>
 
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
+        <div id="installing>" class="chapter">
+            <h2>Installing</h2>
+
+            <p>The script itself can be run remotely, but we'll first need to install dependencies . . .</p>
+
+            <h4>With Homebrew</h4>
+
+<pre><code>$ brew install groovy
+$ brew install lcov
 </code></pre>
 
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
+            <h4>With MacPorts</h4>
 
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
+<pre><code>$ sudo port install groovy
+$ sudo port install lcov
+</code></pre>
 
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
+            <br/>
 
-<h3>
-<a id="rather-drive-stick" class="anchor" href="#rather-drive-stick" aria-hidden="true"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
+        </div>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+        <div id="usage" class="chapter">
+            <h2>Usage</h2>
 
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+            <p>Set your main App target to produce test coverage output (debug mode only).</p>
+            <img src="images/Coverage.png"/>
+            <br/><br/>
 
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+            <p>Set your main App target to instrument program flow (debug mode only).</p>
+            <img src="images/Instrument.png"/>
+            <br/><br/>
 
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
+            <p>Run your tests from Xcode or AppCode, and then produce a coverage report with:</p>
+<pre><code>groovy http://frankencover.it/with -source-dir MyProject/Classes -output-dir build/reports
+    -required-coverage 80
+</code></pre>
 
-<p>Having trouble with Pages? Check out the documentation at <a href="https://help.github.com/pages">https://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
-      </section>
+            <p>Alternatively, create a build script. . . </p>
+        <pre><code>#!/bin/sh
+# First Run Tests
+xcodebuild test -workspace MyProject.xcworkspace/ -scheme 'MyProject' -configuration Debug \
+-destination 'platform=iOS Simulator,name=iPhone 5s,OS=8.1' | xcpretty -c --report junit
+#Above we are piping the build output through xcpretty, which is not required, but very nice.
+#(gem install xcpretty)
 
+# Now Produce Test Coverage Report
+groovy http://frankencover.it/with -source-dir MyProject/Classes -output-dir build/reports
+-required-coverage 80
+        </code></pre>
+
+            <p>. . . and run it with</p>
+            <pre><code>$ sh build.sh</code></pre>
+
+        </div>
+
+        <div id="output" class="chapter">
+            <h2>Output</h2>
+
+            <h3>Cmd-line</h3>
+            <img src="images/output.png"/>
+            <br/><br/>
+
+            <h3>Browser</h3>
+            <p>Reports are located at ${outputDir}/coverage/index.html</p>
+            <img src="images/Report.png"/>
+        </div>
+
+
+        <!--[if !IE]>
+        <script>fixScale(document);</script><![endif]-->
+    </section>
+
+    <div>
+        <h1>Attribution</h1>
+        <p>This script just moves a bunch of files into the right place and runs some commands on them, hopefully
+            saving you the time of having to read the detailed documentation and run manual steps. The real
+            heavy-lifting is being done by the awesomeness of <a href="http://clang.llvm.org/">clang</a> and
+            <a href="http://ltp.sourceforge.net/coverage/lcov.php">lcov</a>.</p>
     </div>
-    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
-    
-  </body>
+    </div>
+</body>
 </html>
