--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ groovy http://frankencover.it/with -source-dir MyProject/Classes -output-dir bui
 
             <h3>Browser</h3>
             <p>Reports are located at ${outputDir}/coverage/index.html</p>
-            <img src="images/Report.png"/>
+            <img src="images/report.png"/>
         </div>
 
 
