--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ $ sudo port install lcov
     -required-coverage 80
 </code></pre>
 
-            <p>Alternatively, create a build script. . . </p>
+            <p>Alternatively, create a build script, which could be run locally or form a build server. </p>
         <pre><code>#!/bin/sh
 # First Run Tests
 xcodebuild test -workspace MyProject.xcworkspace/ -scheme 'MyProject' -configuration Debug \
