--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ groovy http://frankencover.it/with -source-dir MyProject/Classes -required-cover
         <div id="output" class="padding-top">
             <h2>Output</h2>
 
-            <h3>Cmd-line</h3>
+            <h3>Terminal</h3>
             <img src="images/output.png"/>
             <br/><br/>
 
