--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Frankencover by appsquickly</title>
+    <title>frankencover by appsquickly</title>
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
@@ -32,7 +32,7 @@
 
     <section>
         <div id="title">
-            <h1>Frankencover</h1>
+            <h1>frankencover</h1>
 
             <p>Code coverage for iOS and OSX. </p>
             <hr>
@@ -51,7 +51,7 @@
         </ul>
 
         <div id="installing>" class="padding-top">
-            <h2>Installing</h2>
+            <h2>INSTALLING</h2>
 
             <p>The script itself can be run remotely, but we'll first need to install dependencies . . .</p>
 
@@ -72,7 +72,7 @@ $ sudo port install lcov
         </div>
 
         <div id="usage" class="padding-top">
-            <h2>Usage</h2>
+            <h2>USAGE</h2>
 
             <p>Set your main App target to produce test coverage output (debug mode only).</p>
             <img src="images/Coverage.png"/>
@@ -82,13 +82,13 @@ $ sudo port install lcov
             <img src="images/Instrument.png"/>
             <br/><br/>
 
-            <h3 class="padding-top">IDE USE</h3>
+            <h3 class="padding-top">FROM YOUR IDE</h3>
 
             <p>Run your tests from Xcode or AppCode, and then produce a coverage report with:</p>
 <pre><code>groovy http://frankencover.it/with -source-dir MyProject/Classes
 </code></pre>
 
-            <h3 class="padding-top">Build server or cmd-line use</h3>
+            <h3 class="padding-top">FROM A BUILD SERVER OR LOCAL CMD-LINE</h3>
 
             <p>Create a build script, which could be run locally or form a build server. </p>
         <pre><code>#!/bin/sh
@@ -109,10 +109,11 @@ groovy http://frankencover.it/with -source-dir MyProject/Classes -required-cover
 
         </div>
 
-        <div id="output" class="padding-top">
-            <h2>Output</h2>
 
-            <h3>Terminal</h3>
+        <div id="output" class="padding-top">
+            <h2>OUTPUT</h2>
+
+            <h3 style="padding-top: 20px">Terminal</h3>
             <img src="images/output.png"/>
             <br/><br/>
 
@@ -122,13 +123,20 @@ groovy http://frankencover.it/with -source-dir MyProject/Classes -required-cover
             <img src="images/report.png"/>
         </div>
 
+        <div style="padding-top: 50px">
+            <h2>INSTALLING LOCALLY</h2>
+            <p>If you don't want to run the hosted script, it can be installed locally with:</p>
+
+
+            <pre><code>curl -SSL wget http://appsquickly.github.io/FrankenCover/with > FrankenCover && chmod +x FrankenCover</code></pre>
+        </div>
 
         <!--[if !IE]>
         <script>fixScale(document);</script><![endif]-->
     </section>
 
     <div>
-        <h1>Attribution</h1>
+        <h1>ATTRIBUTION</h1>
 
         <p>This script just moves a bunch of files into the right place and runs some commands on them, hopefully
             saving you the time of having to read the detailed documentation and run manual steps. The real
