--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>frankencover by appsquickly</title>
+    <title>frankencover.it by appsquickly</title>
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
@@ -21,9 +21,6 @@
 <div id="header">
     <nav>
         <li class="downloads"><a href="https://github.com/appsquickly/FrankenCover">View On GitHub</a></li>
-        <!--<li class="downloads"><a href="https://github.com/appsquickly/FrankenCover/zipball/master">ZIP</a></li>-->
-        <!--<li class="downloads"><a href="https://github.com/appsquickly/FrankenCover/tarball/master">TAR</a></li>-->
-        <!--<li class="title">DOWNLOADS</li>-->
     </nav>
 </div>
 <!-- end header -->
@@ -32,7 +29,7 @@
 
     <section>
         <div id="title">
-            <h1>frankencover</h1>
+            <h1>frankencover.it</h1>
 
             <p>Code coverage for iOS and OSX. </p>
             <hr>
@@ -128,7 +125,7 @@ groovy http://frankencover.it/with -source-dir MyProject/Classes -required-cover
             <p>If you don't want to run the hosted script, it can be installed locally with:</p>
 
 
-            <pre><code>curl -SSL wget http://appsquickly.github.io/FrankenCover/with > FrankenCover && chmod +x FrankenCover</code></pre>
+            <pre><code>curl -SSL http://frankencover.it/with > FrankenCover && chmod +x FrankenCover</code></pre>
         </div>
 
         <!--[if !IE]>
