--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ $ sudo port install lcov
 
             <h3 class="padding-top">FROM A BUILD SERVER OR LOCAL CMD-LINE</h3>
 
-            <p>Create a build script, which could be run locally or form a build server. </p>
+            <p>Create a build script, as follows: </p>
         <pre><code>#!/bin/sh
 # First Run Tests
 xcodebuild test -workspace MyProject.xcworkspace/ -scheme 'MyProject' -configuration Debug \
