--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <span class="template-credit">Web template by <a href="https://twitter.com/michigangraham">mattgraham</a></span>
         </div>
 
-        <p>Producing a test coverage report for iOS and OSX projects requires a mish-mash of tools and steps. Here we've
+        <p>Generating a test coverage report for iOS and OSX projects requires a mish-mash of tools and steps. Here we've
             glued them all together into something that (hopefully) just works.</p>
 
         <ul style="padding-bottom: 40px">
