link to code coverage wikipedia article.

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div id="title">
             <h1>frankencover.it</h1>
 
-            <p>Code coverage for iOS and OSX. </p>
+            <p><a href="http://en.wikipedia.org/wiki/Code_coverage">Code coverage</a> for iOS and OSX. </p>
             <hr>
             <span class="credits left">A project by <a href="http://appsquick.ly">AppsQuickly</a></span>
             <span class="template-credit">Web template by <a href="https://twitter.com/michigangraham">mattgraham</a></span>
