--- a/index.html
+++ b/index.html
@@ -37,11 +37,12 @@
             <span class="template-credit">Web template by <a href="https://twitter.com/michigangraham">mattgraham</a></span>
         </div>
 
-        <p>Generating a test coverage report for iOS and OSX projects requires a mish-mash of tools and steps. Here we've
+        <p>Generating a code coverage report for iOS and OSX projects requires a mish-mash of tools and steps. Here we've
             glued them all together into something that (hopefully) just works.</p>
 
         <ul style="padding-bottom: 40px">
-            <li>Produces an HTML test coverage report with the least possible steps.</li>
+            <li>Generates a report with minimal steps.</li>
+            <li>Outputs to the terminal as well as produces a detailed report in build-server friendly HTML format.</li>
             <li>Includes a coverage checker. This can be used in CI builds to check minimum test coverage - failing the
                 build if coverage falls below the required amount.
             </li>
