--- a/index.html
+++ b/index.html
@@ -122,7 +122,8 @@ groovy http://frankencover.it/with -source-dir MyProject/Classes -required-cover
 
         <div style="padding-top: 50px">
             <h2>INSTALLING LOCALLY</h2>
-            <p>One advantage or running the hosted script is that If you don't want to run the hosted script, it can be installed locally with:</p>
+            <p>Using the hosted script has the advantage of alleviating the need to update for new features or bug fixes, however if you
+                prefer not to run a remote script, it can be installed locally with:</p>
 
 
             <pre><code>curl -SSL http://frankencover.it/with > FrankenCover && chmod +x FrankenCover</code></pre>
