--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@ groovy http://frankencover.it/with -source-dir MyProject/Classes -required-cover
 
             <pre><code>curl http://frankencover.it/with > FrankenCover && chmod +x FrankenCover</code></pre>
 
-            <p>To review the contents of the script prior to execution, use: </p>
+            <p>Alternatively, to review the contents of the script prior to execution, use: </p>
             <pre><code>curl http://frankencover.it/with | more</code></pre>
 
         </div>
