--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
 <div id="header">
     <nav>
-        <li class="downloads"><a href="https://github.com/appsquickly/FrankenCover">View On GitHub</a></li>
+        <li class="downloads"><a href="https://github.com/appsquickly/frankencover.it">View On GitHub</a></li>
     </nav>
 </div>
 <!-- end header -->
