--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
             <li>Includes a coverage checker. This can be used in CI builds to check minimum test coverage - failing the
                 build if coverage falls below the required amount.
             </li>
+            <li>Free for both commercial and open-source projects.</li>
         </ul>
 
         <div id="installing>" class="padding-top">
