Add note that lcov 1.11 is required.

--- a/index.html
+++ b/index.html
@@ -67,6 +67,10 @@ $ sudo port install lcov
 
             <br/>
 
+            <p style="color: #ffcc00"><strong>NB:</strong> Xcode 6.x requires lcov 1.11, or no coverage will be produced. If you haven't updated your Brew or MacPorts sources for a while, please do so or you might end up with lcov 1.10.</p>
+
+
+
         </div>
 
         <div id="usage" class="padding-top">
