Note about Swift code coverage.

--- a/index.html
+++ b/index.html
@@ -138,6 +138,12 @@ groovy http://frankencover.it/with -source-dir MyProject/Classes -required-cover
         </div>
 
         <div style="padding-top: 50px">
+            <h1>SWIFT CODE COVERAGE</h1>
+
+            <p>At the present time Swift Code coverage is the compiler currently ignores instructions to instrument the codebase. Please vote for <a href="https://openradar.appspot.com/radar?id=6457429508227072">this</a> Radar issue.</p>
+        </div>
+
+        <div style="padding-top: 50px">
             <h1>LICENSE</h1>
 
             <p>Apache License, Version 2.0, January 2004, http://www.apache.org/licenses/</p>
