--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@ groovy http://frankencover.it/with -source-dir MyProject/Classes -required-cover
         <div style="padding-top: 50px">
             <h1>SWIFT CODE COVERAGE</h1>
 
-            <p>At the present time Swift Code coverage because the compiler currently ignores instructions to instrument the codebase. Please vote for <a href="https://openradar.appspot.com/radar?id=6457429508227072">this</a> Radar issue.</p>
+            <p>At the present time Swift Code coverage because the compiler currently ignores instructions to instrument the codebase. Please vote for <a href="https://openradar.appspot.com/radar?id=6457429508227072">this</a> OpenRadar issue.</p>
         </div>
 
         <div style="padding-top: 50px">
