match style of typhoon.

--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
 
 </head>
 <body>
+
+<!--<a href="https://github.com/appsquickly/frankencover.it"><img style="position: absolute; top: 0; right: 0; border: 0;"-->
+                                                            <!--src="https://s3.amazonaws.com/github/ribbons/forkme_right_orange_ff7600.png"-->
+                                                            <!--alt="Fork me on GitHub"></a>-->
+
 <div id="header">
     <nav>
         <li class="downloads"><a href="https://github.com/appsquickly/frankencover.it">View On GitHub</a></li>
@@ -67,7 +72,7 @@ $ sudo port install lcov
 
             <br/>
 
-            <p style="color: #ffcc00"><strong>NB:</strong> Xcode 6.x requires lcov 1.11, or no coverage will be produced. If you haven't updated your Brew or MacPorts sources for a while, please do so or you might end up with lcov 1.10.</p>
+            <p style="color: #E44D26"><strong>NB:</strong> Xcode 6.x requires lcov 1.11, or no coverage will be produced. If you haven't updated your Brew or MacPorts sources for a while, please do so or you might end up with lcov 1.10.</p>
 
 
 
@@ -173,7 +178,7 @@ groovy http://frankencover.it/with -source-dir MyProject/Classes -required-cover
             heavy-lifting is being done by the awesomeness of <a href="http://clang.llvm.org/">clang</a> and
             <a href="http://ltp.sourceforge.net/coverage/lcov.php">lcov</a>.</p>
 
-        <span class="template-credit">This site is hosted on GitHub pages, and the web template was kindly provided by <a href="https://twitter.com/michigangraham">mattgraham</a></span>
+        <span class="template-credit">This site is hosted on GitHub pages.</span>
     </div>
 
 
