--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@ groovy http://frankencover.it/with -source-dir MyProject/Classes \
 
             <div id="left-contact">
                 <article>
-                    <h2>Brought to you by AppsQuickly</h2>
+                    <h2>Brought to you by <a style="color: #b93f04" href="http://appsquick.ly">AppsQuick.ly</a></h2>
 
                     <p>This project is sponsored and lead by <span class="colour">AppsQuick.ly</span>. We are a small
                         team of passionate, top-notch developers. For our clients we develop stunning rich-media and
