--- a/index.html
+++ b/index.html
@@ -359,10 +359,10 @@ groovy http://frankencover.it/with -source-dir MyProject/Classes \
 
                     <p>This project is sponsored and lead by <span class="colour">AppsQuick.ly</span>. We are a small
                         team of passionate, top-notch developers. For our clients we develop stunning rich-media and
-                        mobile applications. In the community we lead a number of popular open source projects, such as
-                        this one, as well as the popular <a style="color: #b93f04" href="www.typhoonframework.org">Typhoon Framework</a> and
-                        <a style = "color: #b93f04" href="https://github.com/appsquickly/XcodeEditor">XCodeEditor</a>, which is used by folks like Xamarin and Apportable.com as well as
-                        powers numerous Xcode plugins available through Alcatraz.</p>
+                        mobile applications. In the community we lead a number of popular open source projects including
+                        the popular <a style="color: #b93f04" href="www.typhoonframework.org">Typhoon Framework</a> and
+                        <a style = "color: #b93f04" href="https://github.com/appsquickly/XcodeEditor">XCodeEditor</a> -
+                        proudly powering your favorite Alcatraz plugins.</p>
                 </article>
             </div>
             <!--left-contact-->
