--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@ groovy http://frankencover.it/with -source-dir MyProject/Classes \
                 <article>
                     <h2>Brought to you by <a style="color: #b93f04" href="http://appsquick.ly">AppsQuick.ly</a></h2>
 
-                    <p>This project is sponsored and lead by <span class="colour">AppsQuick.ly</span>. We are a small
+                    <p>This project is sponsored and lead by <a href="http://appsquick.ly">AppsQuick.ly</a>. We are a small
                         team of passionate, top-notch developers. For our clients we develop stunning rich-media and
                         mobile applications. In the community we lead a number of open source projects including
                         the popular <a href="www.typhoonframework.org">Typhoon Framework</a> and
