--- a/index.html
+++ b/index.html
@@ -324,26 +324,41 @@ groovy http://frankencover.it/with -source-dir MyProject/Classes \
             <h1>Output</h1>
 
             <article>
-
-                <img style="display: block; width: 100%" src="images/output.png"/>
-
-                <h2>&nbsp;</h2>
-
-                <img style="display: block; width: 100% margin-top:600px" src="images/report.png"/>
-
-
-
-
-
-
-                <!--social-->
+                <div>
+                    <img src="images/output.png" alt=""/>
+                    <div id="console-label"> <img width="100%" src="images/console.png" alt=""/></div>
+                </div>
             </article>
+
         </div>
         <!--about-->
     </div>
     <!--bg-->
 </div>
 <!--wrapper-->
+
+<!--BLOCK6-->
+<div class="wrapper border4">
+    <div class="bg">
+        <div id="reportscroll"></div>
+        <div id="report" class="strip">
+
+            <article>
+                <div>
+                    <img src="images/report.png" alt=""/>
+                    <div id="html-label"> <img width="100%" src="images/html.png" alt=""/></div>
+                </div>
+
+            </article>
+
+
+
+
+        </div>
+        <!--about-->
+    </div>
+    <!--bg-->
+</div>
 
 
 <!--BLOCK7-->
@@ -369,7 +384,7 @@ groovy http://frankencover.it/with -source-dir MyProject/Classes \
 
             <div id="right-contact">
                 <article>
-                    <h2>Attribution</h2>
+                    <h2>And the awesomeness of. . . </h2>
 
                     <p>The frankencover.it script just moves a bunch of files into the right place and runs some commands on them,
                         hopefully
