--- a/index.html
+++ b/index.html
@@ -451,12 +451,16 @@ groovy http://frankencover.it/with -source-dir MyProject/Classes \
     });
 </script>
 
-<!--map-->
-<script src="http://maps.google.com/maps/api/js?sensor=false"></script>
-<script src="js/googlemap.js"></script>
+<script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+                (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-<!--youtube player-->
-<script src="js/video.js"></script>
+    ga('create', 'UA-57638059-1', 'auto');
+    ga('send', 'pageview');
+
+</script>
 
 </body>
 </html>
