--- a/index.html
+++ b/index.html
@@ -158,19 +158,18 @@
                 <h1>About</h1>
 
                 <p>Generating a code coverage report for iOS and OSX projects requires a mish-mash of tools and steps.
-                    Here
-                    we've glued them all together into something that (hopefully) just works.</p>
+                    Here we've glued them all together into something that (hopefully) just works. All it took was a
+                little Java, some Perl, a few shell scripts, a couple of Ruby Gems . . . and now you can:</p>
 
                 <ul style="padding-top: 5em; padding-bottom: 10em;">
-                    <li>Generates a report with minimal steps.</li>
-                    <li>Outputs to the terminal as well as produces a detailed report in build-server friendly HTML
+                    <li>Generate a report with minimal steps.</li>
+                    <li>Output to the terminal as well as produce a detailed report in build-server friendly HTML
                         format.
                     </li>
-                    <li>Includes a coverage checker. This can be used in CI builds to check minimum test coverage -
-                        failing the
-                        build if coverage falls below the required amount.
+                    <li>Use the optional coverage checker, for example in CI builds to check minimum test coverage -
+                        failing the build if coverage falls below the required amount.
                     </li>
-                    <li>Free for both commercial and open-source projects!</li>
+                    <li>Use it for free for both commercial and open-source projects!</li>
                 </ul>
 
             </article>
