Fix layout large screens.

--- a/index.html
+++ b/index.html
@@ -323,9 +323,9 @@ groovy http://frankencover.it/with -source-dir MyProject/Classes \
             <h1>Output</h1>
 
             <article>
-                <div>
-                    <img src="images/output.png" alt=""/>
-                    <div id="console-label"> <img width="100%" src="images/console.png" alt=""/></div>
+                <div align="middle">
+                    <img src="images/output.png" align="middle" width="100%" alt=""/>
+                    <div id="console-label"> <img width="100%" align="middle" src="images/console.png" alt=""/></div>
                 </div>
             </article>
 
@@ -344,7 +344,7 @@ groovy http://frankencover.it/with -source-dir MyProject/Classes \
 
             <article>
                 <div>
-                    <img src="images/report.png" alt=""/>
+                    <img src="images/report.png" width="100%" alt=""/>
                     <div id="html-label"> <img width="100%" src="images/html.png" alt=""/></div>
                 </div>
 
