--- a/index.html
+++ b/index.html
@@ -245,9 +245,10 @@ $ sudo port install lcov
                 <img style="display: block; width: 100%" src="images/Instrument.png"/></p>
                 </div>
 
+                <h2>&nbsp;</h2>
 
-                <div style="padding-top: 5em;">
-                    <h2 class="padding-top">FROM YOUR IDE</h2>
+                <div>
+                    <h2>FROM YOUR IDE</h2>
 
                     <p>Run your tests from Xcode or AppCode, and then produce a coverage report with:</p>
 <pre><code>groovy http://frankencover.it/with -source-dir MyProject/Classes
@@ -283,7 +284,7 @@ groovy http://frankencover.it/with -source-dir MyProject/Classes \
             </div>
 
 
-        </div>
+
 
 
 
