Add Swift note.

--- a/index.html
+++ b/index.html
@@ -172,6 +172,13 @@
                     <li>Use it for free for both commercial and open-source projects!</li>
                 </ul>
 
+                <h1>Swift? Sorry, no dice</h1>
+                <p>
+                    As yet there's no way to generate code coverage reports for Swift. If, like us, you'd like to see
+                    this implemented by Apple, please
+                    <a href="https://openradar.appspot.com/radar?id=6457429508227072">vote on this issue</a>.
+                </p>
+
             </article>
         </div>
         <!--About-->
